k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-way-frontend
  namespace: my-way
spec:
  selector:
    app: my-way-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
