k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-way-ingress
  namespace: my-way
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-way-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-way-frontend
                port:
                  number: 80
